--- a/index.Rmd
+++ b/index.Rmd
@@ -4,7 +4,7 @@ author: "Equipo MRSE"
 date: "`r Sys.Date()`"
 output: 
   flexdashboard::flex_dashboard:
-    logo: images/agua_fix.png
+    logo: agua_fix2.png
     orientation: columns
     vertical_layout: fill
     source: embed
@@ -40,7 +40,11 @@ theme_set(theme_bw())
 
 > ***MRSE Hídricos de la EPS Ilo S.A.***
 >
+>
+>
 >EPS Ilo S.A. realiza implementación del Plan de Intervención los MRSE en la Comunidad Campesina de Asana con la finalidad de conservación y recuperación de los Servicios Ecosistemos Hídricos.
+>
+>
 >
 >
 > ***Bienvenido a esta plataforma de acceso público***
@@ -182,7 +186,11 @@ pluv
 
 
 >***Datos de Monitoreo Hidrológico en la Microcuenca de Asana***
+>
+>
 >Como parte de la ejecución del Plan de Mecanismos de Retribución por Servicios Ecosistémicos Hídricos de la EPS Ilo S.A. se cuenta con un Sistema de Monitoreo Hidrológico. Parte de este sistema se muestra en esta página. Aquí puedes visualizar y descargar los datos que se vienen recolectando constantemente.
+>
+>
 >
 > ---***Equipo MRSE***
 
